# kde-thumbnailer-msoole

./: CMakeLists.txt  FindGLIB2.cmake  msoolecreator.cpp
libkowmf/: WmfAbstractBackend.cpp  WmfDeviceContext.cpp  WmfPainterBackend.cpp  WmfParser.cpp  WmfStack.cpp  libwmflogging.h
